finish add course

--- a/src/app/contentprovider/contentprovider.component.html
+++ b/src/app/contentprovider/contentprovider.component.html
@@ -8,8 +8,8 @@
 </div> -->
 <div class="row" style="margin-top: 60px;">
     <div class="col-2">
-      <div class="nav flex-column nav-pills grey lighten-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-          <p class="text-center nav-text" >WEBIS</p>
+      <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" >
+          <p class="text-center nav-text" >MENU</p>
           <li><hr></li>
         <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true" style="margin-top:100px;">My Course</a>
         <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Registered Course</a>
@@ -21,8 +21,10 @@
     <div class="tab-content" id="v-pills-tabContent">
       <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">hellop</div>
       <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
-      <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...</div>
+      <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab"><app-addcourse></app-addcourse></div>
       <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
     </div>
   </div>
 </div>
+<hr>
+<app-footer></app-footer>
