--- a/src/app/contentprovider/contentprovider.component.scss
+++ b/src/app/contentprovider/contentprovider.component.scss
@@ -4,10 +4,12 @@
 }
 
 .nav-pills{
-  height: 800px;
-  background-repeat: no-repeat;
-  background-image: url("https://img.freepik.com/free-vector/blue-3d-modern-background-design_53876-88247.jpg?size=626&ext=jpg");
-  background-size: 300px 800px;
+ // height: 800px;
+
+  background-color: transparent;
+   background-repeat: no-repeat;
+
+ // background-size: 300px 100%;
 }
 
 .nav-pills a{
@@ -18,5 +20,12 @@
 .nav-text{
   font-family: fantasy;
   font-size: 25pt;
+  letter-spacing: 5px;
   color: white;
 }
+.col-2{
+   background-image: url("https://img.freepik.com/free-vector/blue-3d-modern-background-design_53876-88247.jpg?size=626&ext=jpg");
+
+}
+
+
