--- a/src/app/displaycourses/course-content/course-content.component.scss
+++ b/src/app/displaycourses/course-content/course-content.component.scss
@@ -4,7 +4,6 @@
   padding-top: 10px;
   background-image: linear-gradient(to right, rgb(156, 156, 156) , rgb(173, 222, 255));
 
-
 }
 
 .content .inner-content{
@@ -18,12 +17,25 @@
 h1{
   font-family: fantasy;
   color:white;
-  font-size: 36pt;
+  font-size: 40pt;
   letter-spacing: 5px;
 }
 img{
-  margin-top: 30px;
-  width: 95%;
-  height:350px;
-  margin-left: 20px;
+
+  width:400px;
+  height:300px;
+  border: 5px solid white;
+}
+
+#sub-name{
+  float: right;
+  font-size: 40pt;
+  color:rgb(75, 155, 10);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  letter-spacing: 10px;
+  margin-right: 30px;
+  margin-top: 50px;
+  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 3px;
+
 }
