--- a/src/app/contentprovider/addcourse/addcourse.component.html
+++ b/src/app/contentprovider/addcourse/addcourse.component.html
@@ -93,6 +93,20 @@
         </div>
     </div>
       <div class="row">
+        <div class="col-12">
+          <div *ngIf="user">
+            <img src="{{ user.photoUrl }}">
+            <div>
+              <h4>{{ user.name }}</h4>
+              <p>{{ user.email }}</p>
+              <p>{{ user.credentials }}</p>
+            </div>
+          </div>
+          <button (click)="signInWithGoogle()" type="button">Sign in</button>
+          <button (click)="signOut()" type="button">Logout</button>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-4">
           <h6>Topics</h6>
         </div>
