--- a/src/app/displaycourses/displaycourses.component.html
+++ b/src/app/displaycourses/displaycourses.component.html
@@ -65,7 +65,7 @@
                   <mdb-card-text>
                    {{course.description | shorten}}
                   </mdb-card-text>
-
+                  <star-rating [value]="course.rating" checkedcolor="orange" uncheckedcolor="black" size="24px"    readonly="true" ></star-rating>
 
                 </mdb-card-body>
               </mdb-card>
