--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -10,6 +10,14 @@ li{
   color: blue;
 
 }
+img{
+  width: 200px;
+  height: 125px;
+}
+ h5{
+   font-weight: bold;
+ }
+
 
 // -------------------------------------model--------------------------------------------------
 .form-elegant .font-small {
@@ -32,3 +40,14 @@ li{
 
   .form-elegant .modal-body, .form-elegant .modal-footer {
   font-weight: 400; }
+
+
+
+
+
+
+
+
+
+
+
