--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ">
-        <a class="nav-link waves-light" mdbWavesEffect>Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link waves-light" mdbWavesEffect [routerLink]="['/home']">Home<span class="sr-only">(current)</span></a>
       </li>
 
       <!-- Dropdown -->
@@ -37,7 +37,8 @@
     </form>
 
     <div class="btn-group" role="group" aria-label="Basic example">
-        <button *ngIf="!userLoggedIn" mdbBtn type="button" color="success" outline="true" class="waves-light" data-toggle="modal" data-target="#signinModalForm" (click)="login.show()" mdbWavesEffect> Sign In</button>
+        <!-- <button *ngIf="!userLoggedIn" mdbBtn type="button" color="success" outline="true" class="waves-light" data-toggle="modal" data-target="#signinModalForm" (click)="login.show()" mdbWavesEffect> Sign In</button> -->
+        <button *ngIf="!userLoggedIn" mdbBtn type="button" color="success" outline="true" class="waves-light" data-toggle="modal" data-target="#basicExample" (click)="frame.show()" mdbWavesEffect> Sign In</button>
         <button *ngIf="!userLoggedIn" mdbBtn type="button" color="success"  outline="true"  class="waves-light" data-toggle="modal" data-target="#signupModalForm" (click)="register.show()" mdbWavesEffect>Sign Up</button>
     </div>
 
@@ -50,7 +51,7 @@
                     <img [src]="user.imageURL" alt="avatar inage" class="img-fluid rounded-circle z-depth-0" style="height: 40px;"></a>
                   <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" mdbWavesEffect (click)="onLogout()" routerLink="/home">Logout</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/account">Setting</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/student">Setting</a>
                   </div>
                 </li>
               </ul>
@@ -116,7 +117,7 @@
               Input valid
             </mdb-success>
             <p class="font-small blue-text d-flex justify-content-end">Forgot
-              <a href="#" class="blue-text ml-1"> Password?</a>
+              <a  (click)="forgetPassword.show(); login.hide()" class="blue-text ml-1"> Password?</a>
             </p>
           </div>
 
@@ -140,6 +141,67 @@
 </div>
 
 <!-- ------------------------------------------------- End login modal ------------------------------------------->
+<!-- -------------------------------------------------Select role model------------------------------------------- -->
+
+<!-- <button type="button" mdbBtn color="default" rounded="true" data-toggle="modal" data-target="#basicExample"
+        (click)="frame.show()" mdbWavesEffect>Launch Modal
+</button> -->
+
+<div mdbModal #frame="mdbModal" class="modal fade top" id="frameModalTop" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog cascading-modal modal-avatar " role="document">
+    <!--Content-->
+
+    <div class="modal-content" style="background-color: transparent; border:none;">
+
+      <!--Header-->
+      <div class="row">
+        <div class="student" style="background-color: white;margin-right: 30px;">
+            <div class="modal-header">
+                <img src="https://images.unsplash.com/photo-1452830978618-d6feae7d0ffa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar"
+                     class="rounded-circle img-responsive">
+              </div>
+              <!--Body-->
+              <div class="modal-body mb-1">
+
+                <h5 class="mt-1 mb-2 text-center">Student</h5>
+
+
+                <div class="text-center mt-4">
+                  <button mdbBtn color="cyan" rounded="true" class="mt-1 waves-light"  data-target="#signinModalForm" (click)="login.show(); frame.hide()" mdbWavesEffect>Login
+                    <mdb-icon fas icon="sign-in-alt" class="ml-1"></mdb-icon>
+                  </button>
+                </div>
+              </div>
+        </div>
+
+        <div class="conterntProvider" style="background-color: white;">
+            <div class="modal-header">
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg" alt="avatar"
+                     class="rounded-circle img-responsive">
+              </div>
+              <!--Body-->
+              <div class="modal-body mb-1">
+
+                <h5 class="mt-1 mb-2 text-center">Content Provider</h5>
+
+
+                <div class="text-center mt-4">
+                  <button mdbBtn color="cyan" rounded="true" class="mt-1 waves-light"  data-target="#signinModalForm" (click)="login.show();frame.hide()" mdbWavesEffect>Login
+                    <mdb-icon fas icon="sign-in-alt" class="ml-1"></mdb-icon>
+                  </button>
+                </div>
+              </div>
+        </div>
+      </div>
+
+
+    </div>
+    <!--/.Content-->
+  </div>
+</div>
+
+<!-- -------------------------------------------------End Select role model------------------------------------------- -->
 
 <!-- -------------------------------------------------register modal ------------------------------------------->
 <div mdbModal #register="mdbModal" class="modal fade top" id="frameModalTop" tabindex="-1" role="dialog"
@@ -164,14 +226,14 @@
             <div class="col-sm">
               <div class="md-form mb-5">
                     <input type="text" id="Form-text1" class="form-control" mdbInput mdbValidate
-                           formControlName="firstName">
+                           formControlName="fname">
                     <label for="Form-text1">First Name</label>
               </div>
             </div>
             <div class="col-sm">
               <div class="md-form mb-5">
                     <input type="text" id="Form-text2" class="form-control" mdbInput mdbValidate
-                           formControlName="lastName">
+                           formControlName="lname">
                     <label for="Form-text2">Last Name</label>
               </div>
 
@@ -205,6 +267,36 @@
             </mdb-success>
           </div>
 
+
+
+
+
+          <div class="md-form pb-3" style="margin-top: -20px;">
+
+                  <!-- Default unchecked -->
+                  <div class="row">
+                    <div class="col-3"><p style="color: rgb(133, 133, 133);">Role</p></div>
+                    <div class="col-4">
+
+                      <div class="custom-control custom-radio" style="margin-top: 8px;">
+                        <input type="radio" class="custom-control-input" id="defaultChecked" name="defaultExampleRadios" value="student" formControlName="role"  checked mdbInput>
+                        <label class="custom-control-label" for="defaultChecked" style="font-size: 14pt; font-weight: bold;">Student</label>
+                      </div>
+                    </div>
+
+                  <div class="col-5" >
+
+                    <!-- Default checked -->
+                    <div class="custom-control custom-radio"  style="margin-top: 8px; ">
+                      <input type="radio" class="custom-control-input" id="defaultUnchecked" name="defaultExampleRadios" value="contentprovider" formControlName="role" mdbInput>
+                      <label class="custom-control-label" for="defaultUnchecked" style="font-size: 14pt; font-weight: bold;">Content Provider</label>
+                    </div>
+
+                  </div>
+                  </div>
+
+          </div>
+
           <div class="text-center mb-3">
             <button type="submit" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
                     mdbWavesEffect>Sign Up
@@ -219,6 +311,55 @@
     <!--/.Content-->
   </div>
 </div>
+
+<!-- --------------------------------------------Forget password----------------------------------------------- -->
+
+
+<div mdbModal #forgetPassword="mdbModal" class="modal fade top" id="frameModalTop" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <!--Content-->
+    <div class="modal-content form-elegant">
+      <!--Header-->
+      <div class="modal-header text-center">
+        <h3 class="modal-title w-100 dark-grey-text font-weight-bold my-3" id="myModalLabel">
+          <strong>Sign in</strong>
+        </h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="forgetPassword.hide()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <!--Body-->
+      <div class="modal-body mx-4">
+        <!--Body-->
+        <form  >
+
+          <div class="md-form mb-5">
+            <input type="email" id="Form-email1" class="form-control" mdbInput mdbValidate  >
+            <label for="Form-email1">Email</label>
+
+          </div>
+
+
+
+          <div class="text-center mb-3">
+            <button type="submit" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+                    mdbWavesEffect>Send
+            </button>
+          </div>
+        </form>
+
+      </div>
+      <!--Footer-->
+
+    </div>
+    <!--/.Content-->
+  </div>
+</div>
+
+<!-- --------------------------------------------Forget password----------------------------------------------- -->
+
+
 
 
 <!-- --------------------------------------------Footer----------------------------------------------------------------- -->
