--- a/src/app/contentprovider/addcourse/addcourse.component.html
+++ b/src/app/contentprovider/addcourse/addcourse.component.html
@@ -1,5 +1,16 @@
 <div style="width: 100%; ">
-
+    <div class="row">
+        <div class="col-12">
+          <div *ngIf="user">
+            <img src="{{ user.photoUrl }}">
+            <div>
+              <h4>{{ user.name }}</h4>
+            </div>
+          </div>
+          <button (click)="signInWithGoogle()" type="button">Sign in</button>
+          <button (click)="signOut()" type="button">Logout</button>
+        </div>
+      </div>
   <form style="margin-top: 100px;" [formGroup]="contentForm" (ngSubmit)="onSubmit()" >
 
 
@@ -86,26 +97,19 @@
           </mat-form-field>
         </div>
       </div>
+      <div class="row">
+        <div class="col-3">
+          <h6>Course Image</h6>
+          <input type="file">
+        </div>
+      </div>
 
       <div class="row" style="margin-bottom: 50px;">
         <div class="col-12">
           <h4 class="text-center">Course content</h4>
         </div>
     </div>
-      <div class="row">
-        <div class="col-12">
-          <div *ngIf="user">
-            <img src="{{ user.photoUrl }}">
-            <div>
-              <h4>{{ user.name }}</h4>
-              <p>{{ user.email }}</p>
-              <p>{{ user.credentials }}</p>
-            </div>
-          </div>
-          <button (click)="signInWithGoogle()" type="button">Sign in</button>
-          <button (click)="signOut()" type="button">Logout</button>
-        </div>
-      </div>
+
       <div class="row">
         <div class="col-md-4">
           <h6>Topics</h6>
