--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -288,7 +288,7 @@
 
                     <!-- Default checked -->
                     <div class="custom-control custom-radio"  style="margin-top: 8px; ">
-                      <input type="radio" class="custom-control-input" id="defaultUnchecked" name="defaultExampleRadios" value="contentprovider" formControlName="role" mdbInput>
+                      <input type="radio" class="custom-control-input" id="defaultUnchecked" name="defaultExampleRadios" value="contentProvider" formControlName="role" mdbInput>
                       <label class="custom-control-label" for="defaultUnchecked" style="font-size: 14pt; font-weight: bold;">Content Provider</label>
                     </div>
 
