add super admin

--- a/src/app/admin/content-provider/content-provider.component.html
+++ b/src/app/admin/content-provider/content-provider.component.html
@@ -24,7 +24,7 @@
                     </mdb-card-text>
                     <div class="row">
                       <div class="col">
-                        <button mdbBtn type="button"  color="danger" outline="true" size="sm" mdbWavesEffect (click)="onDelete()">Delete</button>
+                        <button mdbBtn type="button"  color="danger" outline="true" size="sm" mdbWavesEffect (click)="onDelete(cp._id)">Delete</button>
                       </div>
                     </div>
                   </mdb-card-body>
