--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -15,7 +15,7 @@
       <app-recent-added-course (passSize)=" receiveSize($event)"></app-recent-added-course>
     </div>
     <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"><app-content-provider></app-content-provider></div>
-    <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab"></div>
+    <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab"><app-all-student></app-all-student></div>
     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab"><app-addcatergory></app-addcatergory></div>
   </div>
 </div>
