--- a/src/app/super-admin/super-admin.component.html
+++ b/src/app/super-admin/super-admin.component.html
@@ -20,9 +20,9 @@
       </div>
       <div class="tab-pane fade" id="v-pills-catergory" role="tabpanel" aria-labelledby="v-pills-catergory-tab"><app-addcatergory></app-addcatergory></div>
       <div class="tab-pane fade" id="v-pills-cp" role="tabpanel" aria-labelledby="v-pills-cp-tab"><app-content-provider></app-content-provider></div>
-      <div class="tab-pane fade" id="v-pills-student" role="tabpanel" aria-labelledby="v-pills-student-tab"></div>
+      <div class="tab-pane fade" id="v-pills-student" role="tabpanel" aria-labelledby="v-pills-student-tab"><app-all-student></app-all-student></div>
       <div class="tab-pane fade" id="v-pills-addAdmin" role="tabpanel" aria-labelledby="v-pills-addAdmin-tab"><app-add-admin></app-add-admin></div>
-      <div class="tab-pane fade" id="v-pills-allAdmin" role="tabpanel" aria-labelledby="v-pills-allAdmin-tab"><app-add-admin></app-add-admin></div>
+      <div class="tab-pane fade" id="v-pills-allAdmin" role="tabpanel" aria-labelledby="v-pills-allAdmin-tab"><app-all-admin></app-all-admin></div>
       <div class="tab-pane fade" id="v-pills-setting" role="tabpanel" aria-labelledby="v-pills-setting-tab"><app-setting></app-setting></div>
     </div>
   </div>
