admin view user account

--- a/src/app/admin/all-student/all-student.component.html
+++ b/src/app/admin/all-student/all-student.component.html
@@ -6,9 +6,9 @@
                   <div class="view rgba-white-slight waves-light" mdbWavesEffect>
                     <!-- Card img -->
                     <img src="{{stu.imageURL}}" alt="Card image cap" >
-                    <!-- <a [routerLink]="['/',course._id,'coursevideo']">
+                    <a [routerLink]="['/','studentprofile',stu._id]">
                       <div class="mask"></div>
-                    </a> -->
+                    </a>
 
                   </div>
                   <!--Card content-->
