--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -11,9 +11,10 @@
   <div class="col-10">
   <div class="tab-content" id="v-pills-tabContent">
     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" ><app-my-courses></app-my-courses></div>
-    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"><app-setting></app-setting></div>
+    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" [class.disabled]=disable><app-setting></app-setting></div>
 
   </div>
+
 </div>
 </div>
 <hr>
