--- a/src/app/student/setting/setting.component.html
+++ b/src/app/student/setting/setting.component.html
@@ -73,3 +73,20 @@
            </div>
        </div>
    </form>
+   <hr>
+   <h5>Delete Account</h5>
+   <form [formGroup]="passwordrestForm" >
+      <div class="form-row" style=" margin-bottom: 30px;">
+          <div class="col">
+            <input type="password" class="form-control" placeholder="Current password"    style=" margin-bottom: 10px;" formControlName="password"  >
+          </div>
+
+      </div>
+      <div class="form-row">
+          <div class="form-group">
+
+              <button type="button" mdbBtn color="danger" mdbWavesEffect outline="true" (click)="onDelete()">Delete</button>
+
+          </div>
+      </div>
+  </form>
