--- a/src/app/contentprovider/addcourse/addcourse.component.html
+++ b/src/app/contentprovider/addcourse/addcourse.component.html
@@ -100,7 +100,7 @@
       <div class="row">
         <div class="col-3">
           <h6>Course Image</h6>
-          <input type="file">
+          <input type="file" (change)="onFileSelected($event)">
         </div>
       </div>
 
