--- a/src/app/student/setting/setting.component.html
+++ b/src/app/student/setting/setting.component.html
@@ -78,7 +78,7 @@
    <form [formGroup]="passwordrestForm" >
       <div class="form-row" style=" margin-bottom: 30px;">
           <div class="col">
-            <input type="password" class="form-control" placeholder="Current password"    style=" margin-bottom: 10px;" formControlName="password"  >
+            <input type="password" class="form-control" placeholder="Current password"    style=" margin-bottom: 10px;" [(ngModel)]="delPassword" name="delPassword" >
           </div>
 
       </div>
