full course upload

--- a/src/app/student/setting/setting.component.html
+++ b/src/app/student/setting/setting.component.html
@@ -75,7 +75,7 @@
    </form>
    <hr>
    <h5>Delete Account</h5>
-   <form [formGroup]="passwordrestForm" >
+   <form >
       <div class="form-row" style=" margin-bottom: 30px;">
           <div class="col">
             <input type="password" class="form-control" placeholder="Current password"    style=" margin-bottom: 10px;" [(ngModel)]="delPassword" name="delPassword" >
