--- a/src/app/search-course/search-course.component.html
+++ b/src/app/search-course/search-course.component.html
@@ -1,5 +1,5 @@
-<p style="margin-top: 60px;">search-course works!</p>
-<div class="row">
+
+<div class="row" style="margin-top: 60px;">
     <div class="col-md-3" *ngFor="let course of serchCourse" >
 
 
