--- a/src/app/displaycourses/displaycourses.component.html
+++ b/src/app/displaycourses/displaycourses.component.html
@@ -101,6 +101,7 @@
                      {{course.description | shorten}}
                     </mdb-card-text>
 
+                    <star-rating [value]="course.rating" checkedcolor="orange" uncheckedcolor="black" size="24px"    readonly="true" ></star-rating>
 
                   </mdb-card-body>
                 </mdb-card>
