--- a/src/app/student/my-courses/my-courses.component.html
+++ b/src/app/student/my-courses/my-courses.component.html
@@ -6,7 +6,7 @@
          <div class="view rgba-white-slight waves-light" mdbWavesEffect>
            <!-- Card img -->
            <img src="{{course.url}}" alt="Card image cap" >
-           <a [routerLink]="['/displaycourses','course-content',course._id]">
+           <a [routerLink]="['/',course._id,'coursevideo']">
              <div class="mask"></div>
            </a>
 
