--- a/src/app/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-navbar/admin-navbar.component.html
@@ -115,7 +115,7 @@
                   <div class="col-4">
 
                     <div class="custom-control custom-radio" style="margin-top: 8px;">
-                      <input type="radio" class="custom-control-input" id="defaultChecked" name="role" value="Admin" formControlName="role"  checked mdbInput>
+                      <input type="radio" class="custom-control-input" id="defaultChecked" name="role" value="admin" formControlName="role"  checked mdbInput>
                       <label class="custom-control-label" for="defaultChecked" style="font-size: 14pt; font-weight: bold;">Admin</label>
                     </div>
                   </div>
