--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,7 +45,7 @@
       </div>
       <hr>
   <div class="row" >
-    <div class="col-md-2" *ngFor="let course of topCourse">
+    <div class="col-md-2" *ngFor="let course of upCommingCourse">
       <!--Card-->
       <mdb-card cascade="true" wider="true" style="height: 300px;margin-top: 50px;">
 
