--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -41,7 +41,15 @@ img{
   .form-elegant .modal-body, .form-elegant .modal-footer {
   font-weight: 400; }
 
+  .example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
 
+  .example-full-width {
+    width: 100%;
+  }
 
 
 
