--- a/src/app/super-admin/add-admin/add-admin.component.html
+++ b/src/app/super-admin/add-admin/add-admin.component.html
@@ -51,7 +51,7 @@
                   <mat-form-field style="width: 100%;" >
                       <mat-select formControlName="role" >
                         <mat-option value="superAdmin">Super Admin</mat-option>
-                        <mat-option value="Admin">Admin</mat-option>
+                        <mat-option value="admin">Admin</mat-option>
 
                       </mat-select>
                     </mat-form-field>
