--- a/src/app/admin/recent-added-course/recent-added-course.component.html
+++ b/src/app/admin/recent-added-course/recent-added-course.component.html
@@ -15,7 +15,7 @@
                   <mdb-card-body>
                     <!--Title-->
                     <mdb-card-title>
-                      <h4>{{course.name}}</h4>
+                      <h6>{{course.name | shorten}}</h6>
                     </mdb-card-title>
                     <P>Author: {{course.author}}</P>
                     <!--Text-->
