--- a/src/app/course-video/course-video.component.html
+++ b/src/app/course-video/course-video.component.html
@@ -21,7 +21,7 @@
   <div class="col">
       <div>
 
-          <ul *ngFor="let topic of course.topic">
+          <ul *ngFor="let topic of course.topics">
 
             <div> {{topic.topic}}
               <ul *ngFor="let videos of topic.videos">
