--- a/src/app/admin/recent-added-course/recent-added-course.component.scss
+++ b/src/app/admin/recent-added-course/recent-added-course.component.scss
@@ -5,9 +5,16 @@ mdb-card{
     margin-bottom: 20px;
     margin-left: 15px;
   }
-  
+
   img{
   width: 100%;
   height: 200px;
   }
-  
+
+  h6 {
+   font-weight: bold;
+  }
+  p{
+    color: gray
+  }
+
